Changes for some small UI bugs/overlapping transparent elements that block user actions

--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -21,8 +21,8 @@ footer {
 .footer-list{
   display: flex;
   flex-direction: row;
-  left: -50px;
   position: relative;
+  padding-left: 0px;
 }
 
 .footer-list > li{
