--- a/src/css/Stream.scss
+++ b/src/css/Stream.scss
@@ -12,6 +12,7 @@
   opacity: 1;
   z-index: 3;
   height: 25px;
+  user-select: none;
 }
 
 
